overscroll weirdness on mobile should be fixed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -141,10 +141,12 @@
 
 html {
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .sk-app-container {
   overflow: hidden;
+  overscroll-behavior: contain;
 }
 
 .layout {
